libqt6c/src/libqscrollbar.hpp

#pragma once
#ifndef SRCC_LIBQSCROLLBAR_HPP
#define SRCC_LIBQSCROLLBAR_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QAbstractSlider QAbstractSlider;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScrollBar QScrollBar;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSlider QStyleOptionSlider;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QScrollBar* QScrollBar_new(QWidget* parent);
QScrollBar* QScrollBar_new2();
QScrollBar* QScrollBar_new3(int param1);
QScrollBar* QScrollBar_new4(int param1, QWidget* parent);
QMetaObject* QScrollBar_MetaObject(const QScrollBar* self);
void* QScrollBar_Metacast(QScrollBar* self, const char* param1);
int QScrollBar_Metacall(QScrollBar* self, int param1, int param2, void** param3);
QSize* QScrollBar_SizeHint(const QScrollBar* self);
bool QScrollBar_Event(QScrollBar* self, QEvent* event);
void QScrollBar_WheelEvent(QScrollBar* self, QWheelEvent* param1);
void QScrollBar_PaintEvent(QScrollBar* self, QPaintEvent* param1);
void QScrollBar_MousePressEvent(QScrollBar* self, QMouseEvent* param1);
void QScrollBar_MouseReleaseEvent(QScrollBar* self, QMouseEvent* param1);
void QScrollBar_MouseMoveEvent(QScrollBar* self, QMouseEvent* param1);
void QScrollBar_HideEvent(QScrollBar* self, QHideEvent* param1);
void QScrollBar_SliderChange(QScrollBar* self, int change);
void QScrollBar_ContextMenuEvent(QScrollBar* self, QContextMenuEvent* param1);
void QScrollBar_InitStyleOption(const QScrollBar* self, QStyleOptionSlider* option);
void QScrollBar_OnMetaObject(const QScrollBar* self, intptr_t slot);
QMetaObject* QScrollBar_SuperMetaObject(const QScrollBar* self);
void QScrollBar_OnMetacast(QScrollBar* self, intptr_t slot);
void* QScrollBar_SuperMetacast(QScrollBar* self, const char* param1);
void QScrollBar_OnMetacall(QScrollBar* self, intptr_t slot);
int QScrollBar_SuperMetacall(QScrollBar* self, int param1, int param2, void** param3);
void QScrollBar_OnSizeHint(const QScrollBar* self, intptr_t slot);
QSize* QScrollBar_SuperSizeHint(const QScrollBar* self);
void QScrollBar_OnEvent(QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperEvent(QScrollBar* self, QEvent* event);
void QScrollBar_OnWheelEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperWheelEvent(QScrollBar* self, QWheelEvent* param1);
void QScrollBar_OnPaintEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperPaintEvent(QScrollBar* self, QPaintEvent* param1);
void QScrollBar_OnMousePressEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperMousePressEvent(QScrollBar* self, QMouseEvent* param1);
void QScrollBar_OnMouseReleaseEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperMouseReleaseEvent(QScrollBar* self, QMouseEvent* param1);
void QScrollBar_OnMouseMoveEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperMouseMoveEvent(QScrollBar* self, QMouseEvent* param1);
void QScrollBar_OnHideEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperHideEvent(QScrollBar* self, QHideEvent* param1);
void QScrollBar_OnSliderChange(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperSliderChange(QScrollBar* self, int change);
void QScrollBar_OnContextMenuEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperContextMenuEvent(QScrollBar* self, QContextMenuEvent* param1);
void QScrollBar_OnInitStyleOption(const QScrollBar* self, intptr_t slot);
void QScrollBar_SuperInitStyleOption(const QScrollBar* self, QStyleOptionSlider* option);
void QScrollBar_KeyPressEvent(QScrollBar* self, QKeyEvent* ev);
void QScrollBar_OnKeyPressEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperKeyPressEvent(QScrollBar* self, QKeyEvent* ev);
void QScrollBar_TimerEvent(QScrollBar* self, QTimerEvent* param1);
void QScrollBar_OnTimerEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperTimerEvent(QScrollBar* self, QTimerEvent* param1);
void QScrollBar_ChangeEvent(QScrollBar* self, QEvent* e);
void QScrollBar_OnChangeEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperChangeEvent(QScrollBar* self, QEvent* e);
int QScrollBar_DevType(const QScrollBar* self);
void QScrollBar_OnDevType(const QScrollBar* self, intptr_t slot);
int QScrollBar_SuperDevType(const QScrollBar* self);
void QScrollBar_SetVisible(QScrollBar* self, bool visible);
void QScrollBar_OnSetVisible(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperSetVisible(QScrollBar* self, bool visible);
QSize* QScrollBar_MinimumSizeHint(const QScrollBar* self);
void QScrollBar_OnMinimumSizeHint(const QScrollBar* self, intptr_t slot);
QSize* QScrollBar_SuperMinimumSizeHint(const QScrollBar* self);
int QScrollBar_HeightForWidth(const QScrollBar* self, int param1);
void QScrollBar_OnHeightForWidth(const QScrollBar* self, intptr_t slot);
int QScrollBar_SuperHeightForWidth(const QScrollBar* self, int param1);
bool QScrollBar_HasHeightForWidth(const QScrollBar* self);
void QScrollBar_OnHasHeightForWidth(const QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperHasHeightForWidth(const QScrollBar* self);
QPaintEngine* QScrollBar_PaintEngine(const QScrollBar* self);
void QScrollBar_OnPaintEngine(const QScrollBar* self, intptr_t slot);
QPaintEngine* QScrollBar_SuperPaintEngine(const QScrollBar* self);
void QScrollBar_MouseDoubleClickEvent(QScrollBar* self, QMouseEvent* event);
void QScrollBar_OnMouseDoubleClickEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperMouseDoubleClickEvent(QScrollBar* self, QMouseEvent* event);
void QScrollBar_KeyReleaseEvent(QScrollBar* self, QKeyEvent* event);
void QScrollBar_OnKeyReleaseEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperKeyReleaseEvent(QScrollBar* self, QKeyEvent* event);
void QScrollBar_FocusInEvent(QScrollBar* self, QFocusEvent* event);
void QScrollBar_OnFocusInEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperFocusInEvent(QScrollBar* self, QFocusEvent* event);
void QScrollBar_FocusOutEvent(QScrollBar* self, QFocusEvent* event);
void QScrollBar_OnFocusOutEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperFocusOutEvent(QScrollBar* self, QFocusEvent* event);
void QScrollBar_EnterEvent(QScrollBar* self, QEnterEvent* event);
void QScrollBar_OnEnterEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperEnterEvent(QScrollBar* self, QEnterEvent* event);
void QScrollBar_LeaveEvent(QScrollBar* self, QEvent* event);
void QScrollBar_OnLeaveEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperLeaveEvent(QScrollBar* self, QEvent* event);
void QScrollBar_MoveEvent(QScrollBar* self, QMoveEvent* event);
void QScrollBar_OnMoveEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperMoveEvent(QScrollBar* self, QMoveEvent* event);
void QScrollBar_ResizeEvent(QScrollBar* self, QResizeEvent* event);
void QScrollBar_OnResizeEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperResizeEvent(QScrollBar* self, QResizeEvent* event);
void QScrollBar_CloseEvent(QScrollBar* self, QCloseEvent* event);
void QScrollBar_OnCloseEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperCloseEvent(QScrollBar* self, QCloseEvent* event);
void QScrollBar_TabletEvent(QScrollBar* self, QTabletEvent* event);
void QScrollBar_OnTabletEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperTabletEvent(QScrollBar* self, QTabletEvent* event);
void QScrollBar_ActionEvent(QScrollBar* self, QActionEvent* event);
void QScrollBar_OnActionEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperActionEvent(QScrollBar* self, QActionEvent* event);
void QScrollBar_DragEnterEvent(QScrollBar* self, QDragEnterEvent* event);
void QScrollBar_OnDragEnterEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperDragEnterEvent(QScrollBar* self, QDragEnterEvent* event);
void QScrollBar_DragMoveEvent(QScrollBar* self, QDragMoveEvent* event);
void QScrollBar_OnDragMoveEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperDragMoveEvent(QScrollBar* self, QDragMoveEvent* event);
void QScrollBar_DragLeaveEvent(QScrollBar* self, QDragLeaveEvent* event);
void QScrollBar_OnDragLeaveEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperDragLeaveEvent(QScrollBar* self, QDragLeaveEvent* event);
void QScrollBar_DropEvent(QScrollBar* self, QDropEvent* event);
void QScrollBar_OnDropEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperDropEvent(QScrollBar* self, QDropEvent* event);
void QScrollBar_ShowEvent(QScrollBar* self, QShowEvent* event);
void QScrollBar_OnShowEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperShowEvent(QScrollBar* self, QShowEvent* event);
bool QScrollBar_NativeEvent(QScrollBar* self, const libqt_string eventType, void* message, intptr_t* result);
void QScrollBar_OnNativeEvent(QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperNativeEvent(QScrollBar* self, const libqt_string eventType, void* message, intptr_t* result);
int QScrollBar_Metric(const QScrollBar* self, int param1);
void QScrollBar_OnMetric(const QScrollBar* self, intptr_t slot);
int QScrollBar_SuperMetric(const QScrollBar* self, int param1);
void QScrollBar_InitPainter(const QScrollBar* self, QPainter* painter);
void QScrollBar_OnInitPainter(const QScrollBar* self, intptr_t slot);
void QScrollBar_SuperInitPainter(const QScrollBar* self, QPainter* painter);
QPaintDevice* QScrollBar_Redirected(const QScrollBar* self, QPoint* offset);
void QScrollBar_OnRedirected(const QScrollBar* self, intptr_t slot);
QPaintDevice* QScrollBar_SuperRedirected(const QScrollBar* self, QPoint* offset);
QPainter* QScrollBar_SharedPainter(const QScrollBar* self);
void QScrollBar_OnSharedPainter(const QScrollBar* self, intptr_t slot);
QPainter* QScrollBar_SuperSharedPainter(const QScrollBar* self);
void QScrollBar_InputMethodEvent(QScrollBar* self, QInputMethodEvent* param1);
void QScrollBar_OnInputMethodEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperInputMethodEvent(QScrollBar* self, QInputMethodEvent* param1);
QVariant* QScrollBar_InputMethodQuery(const QScrollBar* self, int param1);
void QScrollBar_OnInputMethodQuery(const QScrollBar* self, intptr_t slot);
QVariant* QScrollBar_SuperInputMethodQuery(const QScrollBar* self, int param1);
bool QScrollBar_FocusNextPrevChild(QScrollBar* self, bool next);
void QScrollBar_OnFocusNextPrevChild(QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperFocusNextPrevChild(QScrollBar* self, bool next);
bool QScrollBar_EventFilter(QScrollBar* self, QObject* watched, QEvent* event);
void QScrollBar_OnEventFilter(QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperEventFilter(QScrollBar* self, QObject* watched, QEvent* event);
void QScrollBar_ChildEvent(QScrollBar* self, QChildEvent* event);
void QScrollBar_OnChildEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperChildEvent(QScrollBar* self, QChildEvent* event);
void QScrollBar_CustomEvent(QScrollBar* self, QEvent* event);
void QScrollBar_OnCustomEvent(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperCustomEvent(QScrollBar* self, QEvent* event);
void QScrollBar_ConnectNotify(QScrollBar* self, const QMetaMethod* signal);
void QScrollBar_OnConnectNotify(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperConnectNotify(QScrollBar* self, const QMetaMethod* signal);
void QScrollBar_DisconnectNotify(QScrollBar* self, const QMetaMethod* signal);
void QScrollBar_OnDisconnectNotify(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperDisconnectNotify(QScrollBar* self, const QMetaMethod* signal);
void QScrollBar_SetRepeatAction(QScrollBar* self, int action);
void QScrollBar_OnSetRepeatAction(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperSetRepeatAction(QScrollBar* self, int action);
int QScrollBar_RepeatAction(const QScrollBar* self);
void QScrollBar_OnRepeatAction(const QScrollBar* self, intptr_t slot);
int QScrollBar_SuperRepeatAction(const QScrollBar* self);
void QScrollBar_UpdateMicroFocus(QScrollBar* self);
void QScrollBar_OnUpdateMicroFocus(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperUpdateMicroFocus(QScrollBar* self);
void QScrollBar_Create(QScrollBar* self);
void QScrollBar_OnCreate(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperCreate(QScrollBar* self);
void QScrollBar_Destroy(QScrollBar* self);
void QScrollBar_OnDestroy(QScrollBar* self, intptr_t slot);
void QScrollBar_SuperDestroy(QScrollBar* self);
bool QScrollBar_FocusNextChild(QScrollBar* self);
void QScrollBar_OnFocusNextChild(QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperFocusNextChild(QScrollBar* self);
bool QScrollBar_FocusPreviousChild(QScrollBar* self);
void QScrollBar_OnFocusPreviousChild(QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperFocusPreviousChild(QScrollBar* self);
QObject* QScrollBar_Sender(const QScrollBar* self);
void QScrollBar_OnSender(const QScrollBar* self, intptr_t slot);
QObject* QScrollBar_SuperSender(const QScrollBar* self);
int QScrollBar_SenderSignalIndex(const QScrollBar* self);
void QScrollBar_OnSenderSignalIndex(const QScrollBar* self, intptr_t slot);
int QScrollBar_SuperSenderSignalIndex(const QScrollBar* self);
int QScrollBar_Receivers(const QScrollBar* self, const char* signal);
void QScrollBar_OnReceivers(const QScrollBar* self, intptr_t slot);
int QScrollBar_SuperReceivers(const QScrollBar* self, const char* signal);
bool QScrollBar_IsSignalConnected(const QScrollBar* self, const QMetaMethod* signal);
void QScrollBar_OnIsSignalConnected(const QScrollBar* self, intptr_t slot);
bool QScrollBar_SuperIsSignalConnected(const QScrollBar* self, const QMetaMethod* signal);
void QScrollBar_Delete(QScrollBar* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif